BTL1/assignment1/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Break'", "'Foreach'", "'Int'", "'Null'", "'Constructor'", 
                     "'Continue'", "'True'", "'Float'", "'Class'", "'Destructor'", 
                     "'If'", "'False'", "'Boolean'", "'Val'", "'New'", "'Elseif'", 
                     "'Array'", "'String'", "'Var'", "'By'", "'Else'", "'In'", 
                     "'Return'", "'Self'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "';'", "','", "':'", "'..'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'='", 
                     "'!='", "'>'", "'>='", "'<'", "'<='", "'==.'", "'+.'", 
                     "'.'", "'::'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_CMT", "INTLIT_GT0", "ZERO", "FLOATLIT", 
                      "BOOLLIT", "STRLIT", "MUDI_ARRLIT", "BREAK", "FOREACH", 
                      "INT", "NULL", "CONSTRUCTOR", "CONTINUE", "TRUE", 
                      "FLOAT", "CLASS", "DESTRUCTOR", "IF", "FALSE", "BOOLEAN", 
                      "VAL", "NEW", "ELSEIF", "ARRAY", "STRING", "VAR", 
                      "BY", "ELSE", "IN", "RETURN", "SELF", "LP", "RP", 
                      "LCB", "RCB", "LSB", "RSB", "SM", "CM", "CL", "DDT", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQUAL", "ASSIGN", "NOT_EQUAL", "GT", "GE", "LT", 
                      "LE", "COMPARE_STR", "STR_CONCAT", "INSTANCE_ATTR_ACCESS", 
                      "STATIC_ATTR_ACCESS", "ID_STATIC", "ID_WITHOUT_STATIC", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_decls = 1
    RULE_class_decl = 2
    RULE_superclass = 3
    RULE_memberlists = 4
    RULE_member = 5
    RULE_attribute = 6
    RULE_idlist = 7
    RULE_typename = 8
    RULE_pairList = 9
    RULE_pair = 10
    RULE_arrayType = 11
    RULE_classType = 12
    RULE_primitive_type = 13
    RULE_method = 14
    RULE_paralist = 15
    RULE_para = 16
    RULE_block_stmt = 17
    RULE_stmt_list = 18
    RULE_stmt = 19
    RULE_var_decl_stmt = 20
    RULE_idlist2 = 21
    RULE_pairList2 = 22
    RULE_pair2 = 23
    RULE_assign_stmt = 24
    RULE_lhs = 25
    RULE_if_stmt = 26
    RULE_elseifs_stmt = 27
    RULE_elses_stmt = 28
    RULE_else_stmt = 29
    RULE_for_stmt = 30
    RULE_bys_stmt = 31
    RULE_by_stmt = 32
    RULE_break_stmt = 33
    RULE_continue_stmt = 34
    RULE_return_stmt = 35
    RULE_methodInvo_stmt = 36
    RULE_expr = 37
    RULE_expr1 = 38
    RULE_expr2 = 39
    RULE_expr3 = 40
    RULE_expr4 = 41
    RULE_expr5 = 42
    RULE_expr6 = 43
    RULE_expr7 = 44
    RULE_expr8 = 45
    RULE_expr9 = 46
    RULE_expr10 = 47
    RULE_expr11 = 48
    RULE_operand = 49
    RULE_exprlists = 50
    RULE_exprlist = 51
    RULE_intlit = 52
    RULE_index_arrlit = 53
    RULE_ids = 54

    ruleNames =  [ "program", "class_decls", "class_decl", "superclass", 
                   "memberlists", "member", "attribute", "idlist", "typename", 
                   "pairList", "pair", "arrayType", "classType", "primitive_type", 
                   "method", "paralist", "para", "block_stmt", "stmt_list", 
                   "stmt", "var_decl_stmt", "idlist2", "pairList2", "pair2", 
                   "assign_stmt", "lhs", "if_stmt", "elseifs_stmt", "elses_stmt", 
                   "else_stmt", "for_stmt", "bys_stmt", "by_stmt", "break_stmt", 
                   "continue_stmt", "return_stmt", "methodInvo_stmt", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "expr9", "expr10", "expr11", "operand", 
                   "exprlists", "exprlist", "intlit", "index_arrlit", "ids" ]

    EOF = Token.EOF
    BLOCK_CMT=1
    INTLIT_GT0=2
    ZERO=3
    FLOATLIT=4
    BOOLLIT=5
    STRLIT=6
    MUDI_ARRLIT=7
    BREAK=8
    FOREACH=9
    INT=10
    NULL=11
    CONSTRUCTOR=12
    CONTINUE=13
    TRUE=14
    FLOAT=15
    CLASS=16
    DESTRUCTOR=17
    IF=18
    FALSE=19
    BOOLEAN=20
    VAL=21
    NEW=22
    ELSEIF=23
    ARRAY=24
    STRING=25
    VAR=26
    BY=27
    ELSE=28
    IN=29
    RETURN=30
    SELF=31
    LP=32
    RP=33
    LCB=34
    RCB=35
    LSB=36
    RSB=37
    SM=38
    CM=39
    CL=40
    DDT=41
    ADD=42
    SUB=43
    MUL=44
    DIV=45
    MOD=46
    NOT=47
    AND=48
    OR=49
    EQUAL=50
    ASSIGN=51
    NOT_EQUAL=52
    GT=53
    GE=54
    LT=55
    LE=56
    COMPARE_STR=57
    STR_CONCAT=58
    INSTANCE_ATTR_ACCESS=59
    STATIC_ATTR_ACCESS=60
    ID_STATIC=61
    ID_WITHOUT_STATIC=62
    WS=63
    ERROR_CHAR=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decls(self):
            return self.getTypedRuleContext(D96Parser.Class_declsContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.class_decls()
            self.state = 111
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self):
            return self.getTypedRuleContext(D96Parser.Class_declContext,0)


        def class_decls(self):
            return self.getTypedRuleContext(D96Parser.Class_declsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decls" ):
                return visitor.visitClass_decls(self)
            else:
                return visitor.visitChildren(self)




    def class_decls(self):

        localctx = D96Parser.Class_declsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decls)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.class_decl()
                self.state = 114
                self.class_decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.class_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID_WITHOUT_STATIC(self):
            return self.getToken(D96Parser.ID_WITHOUT_STATIC, 0)

        def superclass(self):
            return self.getTypedRuleContext(D96Parser.SuperclassContext,0)


        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def memberlists(self):
            return self.getTypedRuleContext(D96Parser.MemberlistsContext,0)


        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(D96Parser.CLASS)
            self.state = 120
            self.match(D96Parser.ID_WITHOUT_STATIC)
            self.state = 121
            self.superclass()
            self.state = 122
            self.match(D96Parser.LCB)
            self.state = 123
            self.memberlists()
            self.state = 124
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuperclassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def ID_WITHOUT_STATIC(self):
            return self.getToken(D96Parser.ID_WITHOUT_STATIC, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_superclass

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuperclass" ):
                return visitor.visitSuperclass(self)
            else:
                return visitor.visitChildren(self)




    def superclass(self):

        localctx = D96Parser.SuperclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_superclass)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(D96Parser.CL)
                self.state = 127
                self.match(D96Parser.ID_WITHOUT_STATIC)
                pass
            elif token in [D96Parser.LCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def memberlists(self):
            return self.getTypedRuleContext(D96Parser.MemberlistsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memberlists

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberlists" ):
                return visitor.visitMemberlists(self)
            else:
                return visitor.visitChildren(self)




    def memberlists(self):

        localctx = D96Parser.MemberlistsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_memberlists)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.member()
                self.state = 132
                self.memberlists()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.member()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(D96Parser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(D96Parser.MethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.attribute()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID_STATIC, D96Parser.ID_WITHOUT_STATIC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(D96Parser.SM, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def typename(self):
            return self.getTypedRuleContext(D96Parser.TypenameContext,0)


        def pairList(self):
            return self.getTypedRuleContext(D96Parser.PairListContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = D96Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 143
                self.idlist()
                self.state = 144
                self.match(D96Parser.CL)
                self.state = 145
                self.typename()
                pass

            elif la_ == 2:
                self.state = 147
                self.pairList()
                pass


            self.state = 150
            self.match(D96Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ids(self):
            return self.getTypedRuleContext(D96Parser.IdsContext,0)


        def CM(self):
            return self.getToken(D96Parser.CM, 0)

        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = D96Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.ids()
                self.state = 153
                self.match(D96Parser.CM)
                self.state = 154
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.ids()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(D96Parser.ArrayTypeContext,0)


        def classType(self):
            return self.getTypedRuleContext(D96Parser.ClassTypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_typename

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypename" ):
                return visitor.visitTypename(self)
            else:
                return visitor.visitChildren(self)




    def typename(self):

        localctx = D96Parser.TypenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typename)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT, D96Parser.FLOAT, D96Parser.BOOLEAN, D96Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.primitive_type()
                pass
            elif token in [D96Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.arrayType()
                pass
            elif token in [D96Parser.NEW]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.classType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ids(self):
            return self.getTypedRuleContext(D96Parser.IdsContext,0)


        def pair(self):
            return self.getTypedRuleContext(D96Parser.PairContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_pairList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPairList" ):
                return visitor.visitPairList(self)
            else:
                return visitor.visitChildren(self)




    def pairList(self):

        localctx = D96Parser.PairListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pairList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.ids()
            self.state = 165
            self.pair()
            self.state = 166
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.CM)
            else:
                return self.getToken(D96Parser.CM, i)

        def ids(self):
            return self.getTypedRuleContext(D96Parser.IdsContext,0)


        def pair(self):
            return self.getTypedRuleContext(D96Parser.PairContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def CL(self):
            return self.getToken(D96Parser.CL, 0)

        def typename(self):
            return self.getTypedRuleContext(D96Parser.TypenameContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_pair

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = D96Parser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pair)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(D96Parser.CM)
                self.state = 169
                self.ids()
                self.state = 170
                self.pair()
                self.state = 171
                self.expr()
                self.state = 172
                self.match(D96Parser.CM)
                pass
            elif token in [D96Parser.CL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(D96Parser.CL)
                self.state = 175
                self.typename()
                self.state = 176
                self.match(D96Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(D96Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(D96Parser.LSB, 0)

        def CM(self):
            return self.getToken(D96Parser.CM, 0)

        def INTLIT_GT0(self):
            return self.getToken(D96Parser.INTLIT_GT0, 0)

        def RSB(self):
            return self.getToken(D96Parser.RSB, 0)

        def primitive_type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_typeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(D96Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_arrayType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = D96Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(D96Parser.ARRAY)
            self.state = 181
            self.match(D96Parser.LSB)
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.INT, D96Parser.FLOAT, D96Parser.BOOLEAN, D96Parser.STRING]:
                self.state = 182
                self.primitive_type()
                pass
            elif token in [D96Parser.ARRAY]:
                self.state = 183
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)
